package MVI.model;
import java.util.Scanner;

// MVI Pattern

// --- Model ---

/**
 * Интерфейс Intent представляет намерение или действие, которое должно быть выполнено.
 * В данном контексте это маркерный интерфейс, используемый для группировки различных намерений.
 */
public interface Intent {}
